# multi-agent-semantic-alignment

./: .env  .gitignore  README.md  env.txt  pyproject.toml  requirements.txt  vision_dataset.py
.conf/hydra/baseline/: prova.yaml  (+1 more)
conf/: config.yaml
conf/train_baseline/: train_baseline.yaml
conf/train_classifier/: train_classifier.yaml
conf/train_linear/: heterogeneous.yaml  homogeneous.yaml  train_linear.yaml
scripts/: LinearBaseline simulation.py  compute_images.py  example_training_linear.py  simulation.py  train_baseline.py  train_classifier.py  train_linear.py  vision_dataset.py  wandb_downloader.py
src/: __init__.py  base_station.py  baseline.py  common_import.py  datamodules.py  download_utils.py  imports_src.txt  linear_models.py  linear_protocol.py  neural_models.py  users.py  utils.py  vision_dataset.py
wandb/run-20250313_163430-dm7tikf4/: run-dm7tikf4.wandb
wandb/run-20250313_163547-xn6g5wbw/: run-xn6g5wbw.wandb
wandb/run-20250315_120832-tpqrimap/: run-tpqrimap.wandb
wandb/run-20250315_120948-4kycji74/: run-4kycji74.wandb
wandb/run-20250315_121052-imgxoq99/: run-imgxoq99.wandb
wandb/run-20250315_121350-i2lr2hnv/: run-i2lr2hnv.wandb
wandb/run-20250315_121414-jacnrstw/: run-jacnrstw.wandb
wandb/run-20250315_121540-0edtimqj/: run-0edtimqj.wandb
wandb/run-20250315_121620-60fll95d/: run-60fll95d.wandb
wandb/run-20250315_121710-exwqfgvu/: run-exwqfgvu.wandb
wandb/run-20250315_122007-ciihmc3i/: run-ciihmc3i.wandb
wandb/run-20250315_122115-kf8frxtg/: run-kf8frxtg.wandb
wandb/run-20250315_122202-ipf9j7c1/: run-ipf9j7c1.wandb
(+122 files in other folders)
