[project]
name = "multi-agent-semantic-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "lightning>=2.5.0.post0",
    "polars>=1.22.0",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "torch>=2.6.0",
]

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
extend-select = [
      "C4",
      "SIM",
      "UP",
      "TCH",
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
