[project]
name = "multi-agent-semantic-alignment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "gdown>=5.2.0",
    "datasets>=3.3.2",
    "gdown>=5.2.0",
    "hydra-core>=1.3.2",
    "lightning>=2.5.0.post0",
    "polars>=1.22.0",
    "python-dotenv>=1.0.1",
    "python-dotenv>=1.0.1",
    "scipy>=1.15.1",
    "seaborn>=0.13.2",
    "timm>=1.0.15",
    "torch>=2.6.0",
    "cvxpy>=1.6.2",
]

[tool.ruff]
target-version = "py310"
line-length = 79

[tool.ruff.lint]
extend-select = [
      "C4",
      "SIM",
      "UP",
      "TCH",
]


[tool.ruff.format]
quote-style = "single"
indent-style = "space"
docstring-code-format = true
